# Panoramic

./: CMakeLists.txt  LICENSE  README.md
include/: image.h  processor.h
include/Panoramic/: image.h  processor.h  utils.h
src/: CMakeLists.txt  basics.cpp  image.cpp  main.cpp  processor.cpp  util.cpp  utils.cpp
